--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "sass": "sass --watch ./src/sass/main.scss:./src/css/style.css"
+    "sass": "sass --watch ./src/sass/_main.scss:./src/css/style.css"
   },
   "eslintConfig": {
     "extends": [
