--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kasa",
-  "homepage": "http://jordandescharles.github.io/Descharlesjordan_11_010222",
+  "homepage": "http://jordandescharles.github.io/Descharlesjordan_11_010222/public/index.html",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
